Added tests for allowance service.